--- a/TaskMenager/Views/Shared/_Layout.cshtml
+++ b/TaskMenager/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Strona główna", "Index", "Home")</li>
                     <li>@Html.ActionLink("Informacje", "About", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Tasks", "Tasks", "Home")</li>
+                    <li>@Html.ActionLink("Tasks", "ViewTasks", "Home")</li>
                 </ul>
             </div>
         </div>
