--- a/TaskMenager/Views/Shared/_Layout.cshtml
+++ b/TaskMenager/Views/Shared/_Layout.cshtml
@@ -17,14 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nazwa aplikacji", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Task Menager", "ViewTasks", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Strona główna", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Informacje", "About", "Home")</li>
-                    <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Tasks", "ViewTasks", "Home")</li>
+                    <li>@Html.ActionLink("Add Task", "Tasks", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -33,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Moja aplikacja ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - TaskMngr</p>
         </footer>
     </div>
 
