--- a/TaskMenager/Views/Shared/_Layout.cshtml
+++ b/TaskMenager/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Add Task", "Tasks", "Home")</li>
+                    <li>@Html.ActionLink("Sign Up", "Register", "Home")</li>
                 </ul>
             </div>
         </div>
