--- a/TaskMenager/Views/Home/Register.cshtml
+++ b/TaskMenager/Views/Home/Register.cshtml
@@ -48,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to main page", "Index")
 </div>
 
 @section Scripts {
