--- a/TaskMenager/Views/Shared/_Layout.cshtml
+++ b/TaskMenager/Views/Shared/_Layout.cshtml
@@ -39,12 +39,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Task Menager", "ViewTasks", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @if (Session["UserID"] != null)
+                {
+                    @Html.ActionLink("Task Menager", "ViewTasks", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }
+
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Add Task", "Tasks", "Home")</li>
-                    <li>@Html.ActionLink("Sign Up", "Register", "Home")</li>
+                    @if (Session["UserID"] != null)
+                    {
+                        <li>@Html.ActionLink("Add Task", "Tasks", "Home")</li>
+                    }
+                    @if (Session["UserID"] == null)
+                    {
+                        <li>@Html.ActionLink("Sign Up", "Register", "Home")</li>
+                    }
                     @if (Session["UserID"] == null)
                     {
                         <li><a href="#" data-toggle="modal" data-target="#Login">Login</a></li>
