--- a/TaskMenager/Views/Home/LogIn.cshtml
+++ b/TaskMenager/Views/Home/LogIn.cshtml
@@ -1,10 +1,11 @@
 ﻿@model TaskManagerMVC.Models.UserModel
 
 
-@using (Html.BeginForm()) 
+
+@using (Html.BeginForm("LogIn", "Home", FormMethod.Post, new { id = "login" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Provide login information:</h4>
         <hr />
@@ -27,11 +28,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Login" class="btn btn-default" />
+                    <input type="submit" value="Login" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
+
 
 
 
